Update 3. Kitchen Image -> JSON - Empty Room Version - Experiment.md

--- a/Nano Banana/Juno Heights/3. Kitchen Image -> JSON - Empty Room Version - Experiment.md
+++ b/Nano Banana/Juno Heights/3. Kitchen Image -> JSON - Empty Room Version - Experiment.md
@@ -7,7 +7,7 @@
       { "step": 2, "instruction": "Add structural elements to shell ONLY where 'rm':false.", "cats": ["arch", "open"] },
       { "step": 3, "instruction": "Add remaining elements ONLY where 'rm':false. Do not render 'rm':true items.", "cats": ["fix", "furn", "appl", "dec", "grp"] }
     ]
-  },
+},
   "legend": {
     "cat": {
       "arch": "architecture surfaces (floor, wall, ceiling)",
@@ -31,72 +31,56 @@
     }
   },
   "proj": {
-    "name": "L-Shaped_Utility_Room_and_Kitchenette"
+    "name": "Utility Room"
   },
   "media": {
-    "floor": "Floorplan.png",
+    "floor": "image_0.png",
     "refs": [
-      { "id": "r1", "file": "Reference_1.png" },
-      { "id": "r2", "file": "Reference_2.png" },
-      { "id": "r3", "file": "Reference_3.png" }
+      { "id": "v_1", "file": "image_1.png" },
+      { "id": "v_2", "file": "image_2.png" },
+      { "id": "v_3", "file": "image_3.png" }
     ]
   },
   "space": {
     "geom": {
-      "bounds": [3.1, 8.7],
+      "bounds": [3.6, 7.2],
       "pts": [
-        [0.0, 0.195], 
-        [0.0, 0.908], 
-        [0.046, 0.908], 
-        [0.046, 1.0],
-        [0.264, 1.0], 
-        [0.264, 0.943], 
-        [0.207, 0.943], 
-        [0.207, 0.609],
-        [0.322, 0.609], 
-        [0.322, 0.540], 
-        [0.126, 0.540], 
-        [0.126, 0.494],
-        [0.356, 0.494], 
-        [0.356, 0.0], 
-        [0.057, 0.0]
+        [0.0, 1.0],
+        [0.2639, 1.0],
+        [0.2639, 0.5972],
+        [0.5, 0.5972],
+        [0.5, 0.0],
+        [0.1389, 0.0],
+        [0.0, 0.1389]
       ],
       "H": 2.7,
-      "orientation": "+x",
+      "orientation": "+y",
       "walls": [
-        { "id": "w1", "seq": 1, "p0": 0, "p1": 1, "label": "long_left_wall" },
-        { "id": "w2", "seq": 2, "p0": 1, "p1": 2, "label": "top_left_connector_h" },
-        { "id": "w3", "seq": 3, "p0": 2, "p1": 3, "label": "top_left_connector_v" },
-        { "id": "w4", "seq": 4, "p0": 3, "p1": 4, "label": "top_wall_1.9m" },
-        { "id": "w5", "seq": 5, "p0": 4, "p1": 5, "label": "stair_alcove_right" },
-        { "id": "w6", "seq": 6, "p0": 5, "p1": 6, "label": "stair_alcove_bottom" },
-        { "id": "w7", "seq": 7, "p0": 6, "p1": 7, "label": "stair_alcove_left_2.9m" },
-        { "id": "w8", "seq": 8, "p0": 7, "p1": 8, "label": "dumbwaiter_alcove_top" },
-        { "id": "w9", "seq": 9, "p0": 8, "p1": 9, "label": "dumbwaiter_alcove_right" },
-        { "id": "w10", "seq": 10, "p0": 9, "p1": 10, "label": "dumbwaiter_alcove_bottom_1.7m" },
-        { "id": "w11", "seq": 11, "p0": 10, "p1": 11, "label": "kitchenette_connector_v" },
-        { "id": "w12", "seq": 12, "p0": 11, "p1": 12, "label": "kitchenette_connector_h" },
-        { "id": "w13", "seq": 13, "p0": 12, "p1": 13, "label": "right_wall_4.3m" },
-        { "id": "w14", "seq": 14, "p0": 13, "p1": 14, "label": "bottom_wall_2.6m" },
-        { "id": "w15", "seq": 15, "p0": 14, "p1": 0, "label": "angled_wall_1.4m" }
+        { "id": "w1", "seq": 1, "p0": 0, "p1": 1 },
+        { "id": "w2", "seq": 2, "p0": 1, "p1": 2 },
+        { "id": "w3", "seq": 3, "p0": 2, "p1": 3 },
+        { "id": "w4", "seq": 4, "p0": 3, "p1": 4 },
+        { "id": "w5", "seq": 5, "p0": 4, "p1": 5 },
+        { "id": "w6", "seq": 6, "p0": 5, "p1": 6 },
+        { "id": "w7", "seq": 7, "p0": 6, "p1": 0 }
       ]
     }
   },
   "views": [
     {
-      "id": "v1",
-      "ref": "r1",
-      "cam": { "rel": "corner", "w1": "w15", "w2": "w1", "xy": [0.05, 0.1], "h": 1.6 }
+      "id": "v_1",
+      "ref": "v_1",
+      "cam": { "rel": "free", "w1": null, "w2": null, "xy": [0.25, 0.5], "h": 1.6 }
     },
     {
-      "id": "v2",
-      "ref": "r2",
-      "cam": { "rel": "free", "w1": null, "w2": null, "xy": [0.2, 0.3], "h": 1.6 }
+      "id": "v_2",
+      "ref": "v_2",
+      "cam": { "rel": "corner", "w1": "w7", "w2": "w1", "xy": [0.05, 0.95], "h": 1.6 }
     },
     {
-      "id": "v3",
-      "ref": "r3",
-      "cam": { "rel": "corner", "w1": "w13", "w2": "w14", "xy": [0.3, 0.1], "h": 1.6 }
+      "id": "v_3",
+      "ref": "v_3",
+      "cam": { "rel": "wall", "w1": "w4", "w2": null, "xy": [0.45, 0.3], "h": 1.6 }
     }
   ],
   "elems": [
@@ -104,127 +88,13 @@
       "id": "floor_1",
       "cat": "arch",
       "type": "floor",
-      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.15, 0.4], "h": 0.0, "sz": [null, null, null] },
-      "views": [ 
-        { "v": "v1", "bb": [0, 1, 0, 0.3], "vis": "f" }, 
-        { "v": "v2", "bb": [0, 1, 0, 0.4], "vis": "f" }, 
-        { "v": "v3", "bb": [0, 1, 0, 0.4], "vis": "f" }
+      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.25, 0.5], "h": 0, "sz": [null, null, null] },
+      "views": [
+        { "v": "v_1", "bb": [0.0, 1.0, 0.0, 0.5], "vis": "p" },
+        { "v": "v_2", "bb": [0.0, 1.0, 0.0, 0.6], "vis": "p" },
+        { "v": "v_3", "bb": [0.0, 1.0, 0.0, 0.5], "vis": "p" }
       ],
-      "d": "terracotta_square_tiles_red_grout",
-      "rm": false,
-      "repl": null
-    },
-    {
-      "id": "ceiling_1",
-      "cat": "arch",
-      "type": "ceiling",
-      "pos": { "rel": "ceil", "w1": null, "w2": null, "xy": [0.15, 0.4], "h": 2.7, "sz": [null, null, null] },
-      "views": [ 
-        { "v": "v1", "bb": [0, 1, 0.8, 1], "vis": "f" }, 
-        { "v": "v2", "bb": [0, 1, 0.8, 1], "vis": "f" }, 
-        { "v": "v3", "bb": [0, 1, 0.8, 1], "vis": "f" } 
-      ],
-      "d": "flat_painted_white",
-      "rm": false,
-      "repl": null
-    },
-    {
-      "id": "stair_1",
-      "cat": "arch",
-      "type": "staircase",
-      "pos": { "rel": "between", "w1": "w5", "w2": "w7", "xy": [0.22, 0.7], "h": 0.0, "sz": [null, null, null] },
-      "views": [ { "v": "v2", "bb": [0.0, 0.3, 0.0, 0.8], "vis": "f" } ],
-      "d": "stone_steps_metal_railing",
-      "rm": false,
-      "repl": null
-    },
-    {
-      "id": "win_1",
-      "cat": "open",
-      "type": "window",
-      "pos": { "rel": "on", "w1": "w15", "w2": null, "xy": [0.03, 0.1], "h": 1.2, "sz": [0.6, 1.0, null] },
-      "views": [ { "v": "v1", "bb": [0.28, 0.35, 0.35, 0.6], "vis": "f" } ],
-      "d": "casement_black_aluminium",
-      "rm": false,
-      "repl": null
-    },
-    {
-      "id": "win_2",
-      "cat": "open",
-      "type": "window",
-      "pos": { "rel": "on", "w1": "w14", "w2": null, "xy": [0.2, 0.0], "h": 1.2, "sz": [0.6, 1.0, null] },
-      "views": [ { "v": "v1", "bb": [0.45, 0.52, 0.35, 0.6], "vis": "f" } ],
-      "d": "casement_black_aluminium",
-      "rm": false,
-      "repl": null
-    },
-    {
-      "id": "win_3",
-      "cat": "open",
-      "type": "window",
-      "pos": { "rel": "on", "w1": "w13", "w2": null, "xy": [0.356, 0.1], "h": 1.2, "sz": [0.6, 1.0, null] },
-      "views": [ { "v": "v1", "bb": [0.88, 0.95, 0.35, 0.6], "vis": "p" } ],
-      "d": "casement_black_aluminium",
-      "rm": false,
-      "repl": null
-    },
-    {
-      "id": "win_4",
-      "cat": "open",
-      "type": "window",
-      "pos": { "rel": "on", "w1": "w12", "w2": null, "xy": [0.24, 0.494], "h": 1.2, "sz": [0.8, 1.0, null] },
-      "views": [ { "v": "v2", "bb": [0.58, 0.68, 0.38, 0.6], "vis": "f" }, { "v": "v3", "bb": [0.55, 0.65, 0.35, 0.55], "vis": "f" } ],
-      "d": "casement_black_aluminium",
-      "rm": false,
-      "repl": null
-    },
-    {
-      "id": "door_1",
-      "cat": "open",
-      "type": "door",
-      "pos": { "rel": "on", "w1": "w13", "w2": null, "xy": [0.356, 0.3], "h": 1.05, "sz": [0.8, 2.1, null] },
-      "views": [ { "v": "v1", "bb": [0.95, 1.0, 0.2, 0.8], "vis": "p" }, { "v": "v3", "bb": [0.85, 1.0, 0.2, 0.9], "vis": "f" } ],
-      "d": "casement_black_aluminium_glass",
-      "rm": false,
-      "repl": null
-    },
-    {
-      "id": "door_2",
-      "cat": "open",
-      "type": "door",
-      "pos": { "rel": "on", "w1": "w13", "w2": null, "xy": [0.356, 0.4], "h": 1.05, "sz": [0.8, 2.1, null] },
-      "views": [ { "v": "v3", "bb": [0.7, 0.85, 0.2, 0.9], "vis": "f" } ],
-      "d": "casement_black_aluminium_glass",
-      "rm": false,
-      "repl": null
-    },
-    {
-      "id": "arch_1",
-      "cat": "open",
-      "type": "archway",
-      "pos": { "rel": "between", "w1": "w6", "w2": "w7", "xy": [0.19, 0.65], "h": 1.0, "sz": [1.0, 2.2, null] },
-      "views": [ { "v": "v2", "bb": [0.0, 0.3, 0.0, 0.9], "vis": "f" } ],
-      "d": "plastered_arch_opening",
-      "rm": true,
-      "repl": "plain_wall"
-    },
-    {
-      "id": "dumbwaiter_1",
-      "cat": "open",
-      "type": "pass_through",
-      "pos": { "rel": "on", "w1": "w9", "w2": null, "xy": [0.322, 0.42], "h": 1.2, "sz": [0.6, 0.8, null] },
-      "views": [ { "v": "v2", "bb": [0.35, 0.45, 0.4, 0.6], "vis": "f" } ],
-      "d": "dumbwaiter_opening_silver_frame",
-      "rm": false,
-      "repl": null
-    },
-    {
-      "id": "ac_1",
-      "cat": "fix",
-      "type": "ac_unit",
-      "pos": { "rel": "on", "w1": "w13", "w2": null, "xy": [0.356, 0.45], "h": 2.2, "sz": [0.8, 0.3, 0.2] },
-      "views": [ { "v": "v1", "bb": [0.9, 1.0, 0.8, 0.9], "vis": "f" }, { "v": "v3", "bb": [0.8, 0.95, 0.8, 0.9], "vis": "f" } ],
-      "d": "wall_mounted_white",
+      "d": "terracotta_tiled_floor",
       "rm": false,
       "repl": null
     },
@@ -232,411 +102,401 @@
       "id": "fan_1",
       "cat": "fix",
       "type": "ceiling_fan",
-      "pos": { "rel": "ceil", "w1": null, "w2": null, "xy": [0.15, 0.4], "h": 2.5, "sz": [1.2, null, null] },
-      "views": [ { "v": "v1", "bb": [0.4, 0.6, 0.8, 0.95], "vis": "f" }, { "v": "v2", "bb": [0.5, 0.7, 0.8, 0.95], "vis": "f" }, { "v": "v3", "bb": [0.4, 0.6, 0.8, 0.95], "vis": "f" } ],
-      "d": "metal_and_wood_blades",
+      "pos": { "rel": "ceil", "w1": null, "w2": null, "xy": [0.25, 0.5], "h": 2.7, "sz": [1.2, 0.4, 1.2] },
+      "views": [
+        { "v": "v_1", "bb": [0.4, 0.6, 0.8, 1.0], "vis": "f" },
+        { "v": "v_2", "bb": [0.5, 0.7, 0.8, 0.95], "vis": "f" },
+        { "v": "v_3", "bb": [0.45, 0.65, 0.85, 1.0], "vis": "f" }
+      ],
+      "d": "ceiling_fan_with_light",
+      "rm": false,
+      "repl": null
+    },
+    {
+      "id": "door_1",
+      "cat": "open",
+      "type": "door",
+      "pos": { "rel": "on", "w1": "w6", "w2": null, "xy": [0.07, 0.07], "h": 1.0, "sz": [0.9, 2.0, null] },
+      "views": [
+        { "v": "v_2", "bb": [0.0, 0.1, 0.2, 0.8], "vis": "p" },
+        { "v": "v_3", "bb": [0.85, 1.0, 0.2, 0.8], "vis": "p" }
+      ],
+      "d": "black_aluminium_door",
+      "rm": false,
+      "repl": null
+    },
+    {
+      "id": "door_2",
+      "cat": "open",
+      "type": "door",
+      "pos": { "rel": "on", "w1": "w7", "w2": null, "xy": [0.0, 0.5], "h": 1.0, "sz": [0.9, 2.0, null] },
+      "views": [
+        { "v": "v_2", "bb": [0.1, 0.3, 0.2, 0.8], "vis": "p" }
+      ],
+      "d": "black_aluminium_door",
+      "rm": false,
+      "repl": null
+    },
+    {
+      "id": "win_1",
+      "cat": "open",
+      "type": "window",
+      "pos": { "rel": "on", "w1": "w1", "w2": null, "xy": [0.13, 1.0], "h": 1.5, "sz": [1.0, 1.2, null] },
+      "views": [
+        { "v": "v_1", "bb": [0.25, 0.4, 0.3, 0.7], "vis": "f" },
+        { "v": "v_2", "bb": [0.6, 0.75, 0.3, 0.6], "vis": "f" }
+      ],
+      "d": "black_aluminium_window",
+      "rm": false,
+      "repl": null
+    },
+    {
+      "id": "win_2",
+      "cat": "open",
+      "type": "window",
+      "pos": { "rel": "on", "w1": "w4", "w2": null, "xy": [0.5, 0.3], "h": 1.5, "sz": [1.2, 1.2, null] },
+      "views": [
+        { "v": "v_1", "bb": [0.85, 1.0, 0.3, 0.7], "vis": "p" },
+        { "v": "v_3", "bb": [0.5, 0.7, 0.3, 0.7], "vis": "f" }
+      ],
+      "d": "black_aluminium_window",
+      "rm": false,
+      "repl": null
+    },
+    {
+      "id": "win_3",
+      "cat": "open",
+      "type": "window",
+      "pos": { "rel": "on", "w1": "w5", "w2": null, "xy": [0.3, 0.0], "h": 1.5, "sz": [1.0, 1.2, null] },
+      "views": [
+        { "v": "v_3", "bb": [0.7, 0.85, 0.3, 0.7], "vis": "f" }
+      ],
+      "d": "black_aluminium_window",
+      "rm": false,
+      "repl": null
+    },
+    {
+      "id": "win_4",
+      "cat": "open",
+      "type": "window",
+      "pos": { "rel": "on", "w1": "w7", "w2": null, "xy": [0.0, 0.8], "h": 1.5, "sz": [1.0, 1.2, null] },
+      "views": [
+        { "v": "v_1", "bb": [0.0, 0.1, 0.3, 0.7], "vis": "p" },
+        { "v": "v_2", "bb": [0.3, 0.45, 0.3, 0.6], "vis": "f" }
+      ],
+      "d": "black_aluminium_window",
       "rm": false,
       "repl": null
     },
     {
       "id": "sconce_1",
       "cat": "fix",
-      "type": "wall_sconce",
-      "pos": { "rel": "on", "w1": "w1", "w2": null, "xy": [0.0, 0.3], "h": 1.8, "sz": [null, null, null] },
-      "views": [ { "v": "v1", "bb": [0.1, 0.15, 0.65, 0.75], "vis": "f" } ],
-      "d": "black_metal_swing_arm",
+      "type": "sconce",
+      "pos": { "rel": "on", "w1": "w4", "w2": null, "xy": [0.5, 0.45], "h": 1.8, "sz": [null, null, null] },
+      "views": [],
+      "d": "black_wall_sconce",
       "rm": false,
       "repl": null
     },
     {
       "id": "sconce_2",
       "cat": "fix",
-      "type": "wall_sconce",
-      "pos": { "rel": "on", "w1": "w1", "w2": null, "xy": [0.0, 0.6], "h": 1.8, "sz": [null, null, null] },
-      "views": [ { "v": "v1", "bb": [0.2, 0.25, 0.65, 0.75], "vis": "f" } ],
-      "d": "black_metal_swing_arm",
+      "type": "sconce",
+      "pos": { "rel": "on", "w1": "w4", "w2": null, "xy": [0.5, 0.15], "h": 1.8, "sz": [null, null, null] },
+      "views": [],
+      "d": "black_wall_sconce",
       "rm": false,
       "repl": null
     },
     {
       "id": "sconce_3",
       "cat": "fix",
-      "type": "wall_sconce",
-      "pos": { "rel": "on", "w1": "w12", "w2": null, "xy": [0.24, 0.494], "h": 1.8, "sz": [null, null, null] },
-      "views": [ { "v": "v2", "bb": [0.6, 0.65, 0.65, 0.7], "vis": "f" } ],
-      "d": "black_metal_swing_arm",
+      "type": "sconce",
+      "pos": { "rel": "on", "w1": "w7", "w2": null, "xy": [0.0, 0.65], "h": 1.8, "sz": [null, null, null] },
+      "views": [],
+      "d": "black_wall_sconce",
       "rm": false,
       "repl": null
     },
     {
       "id": "sconce_4",
       "cat": "fix",
-      "type": "wall_sconce",
-      "pos": { "rel": "on", "w1": "w13", "w2": null, "xy": [0.356, 0.2], "h": 1.8, "sz": [null, null, null] },
-      "views": [ { "v": "v1", "bb": [0.8, 0.85, 0.65, 0.7], "vis": "f" } ],
-      "d": "black_metal_swing_arm",
+      "type": "sconce",
+      "pos": { "rel": "on", "w1": "w7", "w2": null, "xy": [0.0, 0.35], "h": 1.8, "sz": [null, null, null] },
+      "views": [],
+      "d": "black_wall_sconce",
       "rm": false,
       "repl": null
     },
     {
-      "id": "cab_wall_1",
+      "id": "arch_1",
+      "cat": "open",
+      "type": "archway",
+      "pos": { "rel": "on", "w1": "w3", "w2": null, "xy": [0.38, 0.5972], "h": 1.0, "sz": [1.0, 2.0, null] },
+      "views": [
+        { "v": "v_1", "bb": [0.6, 0.8, 0.2, 0.8], "vis": "f" },
+        { "v": "v_3", "bb": [0.0, 0.2, 0.2, 0.8], "vis": "p" }
+      ],
+      "d": "countertop_height_archway",
+      "rm": false,
+      "repl": null
+    },
+    {
+      "id": "dumbwaiter_1",
       "cat": "fix",
-      "type": "wall_cabinet",
-      "pos": { "rel": "on", "w1": "w13", "w2": null, "xy": [0.356, 0.4], "h": 1.8, "sz": [0.6, 0.6, 0.3] },
-      "views": [ { "v": "v1", "bb": [0.6, 0.7, 0.6, 0.8], "vis": "f" } ],
-      "d": "wooden_wall_cabinet",
+      "type": "dumbwaiter",
+      "pos": { "rel": "on", "w1": "w2", "w2": null, "xy": [0.2639, 0.8], "h": 1.0, "sz": [0.6, 0.8, 0.6] },
+      "views": [
+        { "v": "v_1", "bb": [0.4, 0.5, 0.3, 0.6], "vis": "f" },
+        { "v": "v_2", "bb": [0.75, 0.85, 0.3, 0.5], "vis": "f" }
+      ],
+      "d": "dumbwaiter_wooden_frame_metal_doors",
       "rm": false,
       "repl": null
     },
     {
-      "id": "counter_long_1",
+      "id": "counter_1",
       "cat": "fix",
       "type": "countertop",
-      "pos": { "rel": "on", "w1": "w1", "w2": null, "xy": [0.0, 0.45], "h": 0.9, "sz": [0.6, 0.04, 3.0] },
-      "views": [ { "v": "v1", "bb": [0.0, 0.3, 0.3, 0.4], "vis": "f" } ],
-      "d": "wooden_countertop_run",
-      "rm": true,
-      "repl": "plain_wall,_empty_floor"
+      "pos": { "rel": "on", "w1": "w4", "w2": null, "xy": [0.5, 0.3], "h": 0.9, "sz": [2.0, 0.05, 0.6] },
+      "views": [
+        { "v": "v_1", "bb": [0.7, 1.0, 0.4, 0.5], "vis": "p" },
+        { "v": "v_3", "bb": [0.3, 0.8, 0.4, 0.5], "vis": "f" }
+      ],
+      "d": "wooden_countertop_with_sink",
+      "rm": false,
+      "repl": null
     },
     {
-      "id": "shelf_long_1",
+      "id": "cab_lower_1",
+      "cat": "fix",
+      "type": "cabinet",
+      "pos": { "rel": "on", "w1": "w4", "w2": null, "xy": [0.5, 0.3], "h": 0.0, "sz": [2.0, 0.9, 0.6] },
+      "views": [
+        { "v": "v_1", "bb": [0.7, 1.0, 0.1, 0.4], "vis": "p" },
+        { "v": "v_3", "bb": [0.3, 0.8, 0.1, 0.4], "vis": "f" }
+      ],
+      "d": "wooden_lower_kitchen_cabinets",
+      "rm": false,
+      "repl": null
+    },
+    {
+      "id": "cab_upper_1",
+      "cat": "fix",
+      "type": "cabinet",
+      "pos": { "rel": "on", "w1": "w3", "w2": null, "xy": [0.38, 0.5972], "h": 1.5, "sz": [0.8, 0.6, 0.3] },
+      "views": [
+        { "v": "v_1", "bb": [0.6, 0.7, 0.6, 0.8], "vis": "f" }
+      ],
+      "d": "wall_mounted_wooden_upper_cabinet",
+      "rm": false,
+      "repl": null
+    },
+    {
+      "id": "shelf_1",
       "cat": "fix",
       "type": "shelf",
-      "pos": { "rel": "on", "w1": "w1", "w2": null, "xy": [0.0, 0.45], "h": 1.4, "sz": [0.3, 0.02, 3.0] },
-      "views": [ { "v": "v1", "bb": [0.0, 0.3, 0.5, 0.6], "vis": "f" } ],
-      "d": "wooden_wall_shelf",
-      "rm": true,
-      "repl": "plain_wall,_empty_floor"
-    },
-    {
-      "id": "base_unit_long_1",
-      "cat": "fix",
-      "type": "base_cabinet",
-      "pos": { "rel": "on", "w1": "w1", "w2": null, "xy": [0.0, 0.3], "h": 0.45, "sz": [0.6, 0.9, 0.8] },
-      "views": [ { "v": "v1", "bb": [0.0, 0.15, 0.0, 0.3], "vis": "f" } ],
-      "d": "wooden_base_cabinet",
-      "rm": true,
-      "repl": "plain_wall,_empty_floor"
-    },
-    {
-      "id": "base_unit_long_2",
-      "cat": "fix",
-      "type": "base_cabinet",
-      "pos": { "rel": "on", "w1": "w1", "w2": null, "xy": [0.0, 0.6], "h": 0.45, "sz": [0.6, 0.9, 0.8] },
-      "views": [ { "v": "v1", "bb": [0.15, 0.3, 0.0, 0.3], "vis": "f" } ],
-      "d": "wooden_base_cabinet",
-      "rm": true,
-      "repl": "plain_wall,_empty_floor"
-    },
-    {
-      "id": "counter_kit_1",
-      "cat": "fix",
-      "type": "countertop",
-      "pos": { "rel": "between", "w1": "w10", "w2": "w12", "xy": [0.2, 0.5], "h": 0.9, "sz": [2.0, 0.04, 0.6] },
-      "views": [ { "v": "v2", "bb": [0.4, 0.8, 0.3, 0.4], "vis": "f" }, { "v": "v3", "bb": [0.3, 0.7, 0.3, 0.4], "vis": "f" } ],
-      "d": "wooden_kitchenette_counter",
-      "rm": true,
-      "repl": "plain_wall,_empty_floor"
-    },
-    {
-      "id": "base_unit_kit_1",
-      "cat": "fix",
-      "type": "base_cabinet",
-      "pos": { "rel": "on", "w1": "w10", "w2": null, "xy": [0.15, 0.52], "h": 0.45, "sz": [0.6, 0.9, 0.5] },
-      "views": [ { "v": "v3", "bb": [0.3, 0.4, 0.0, 0.3], "vis": "f" } ],
-      "d": "wooden_base_cabinet",
-      "rm": true,
-      "repl": "plain_wall,_empty_floor"
-    },
-    {
-      "id": "base_unit_kit_2",
-      "cat": "fix",
-      "type": "base_cabinet",
-      "pos": { "rel": "on", "w1": "w10", "w2": null, "xy": [0.2, 0.52], "h": 0.45, "sz": [0.6, 0.9, 0.5] },
-      "views": [ { "v": "v3", "bb": [0.4, 0.5, 0.0, 0.3], "vis": "f" } ],
-      "d": "wooden_base_cabinet",
-      "rm": true,
-      "repl": "plain_wall,_empty_floor"
-    },
-    {
-      "id": "base_unit_kit_3",
-      "cat": "fix",
-      "type": "base_cabinet",
-      "pos": { "rel": "on", "w1": "w10", "w2": null, "xy": [0.25, 0.52], "h": 0.45, "sz": [0.6, 0.9, 0.5] },
-      "views": [ { "v": "v3", "bb": [0.5, 0.6, 0.0, 0.3], "vis": "f" } ],
-      "d": "wooden_base_cabinet",
-      "rm": true,
-      "repl": "plain_wall,_empty_floor"
-    },
-    {
-      "id": "base_unit_kit_4",
-      "cat": "fix",
-      "type": "base_cabinet",
-      "pos": { "rel": "on", "w1": "w10", "w2": null, "xy": [0.3, 0.52], "h": 0.45, "sz": [0.6, 0.9, 0.5] },
-      "views": [ { "v": "v3", "bb": [0.6, 0.7, 0.0, 0.3], "vis": "f" } ],
-      "d": "wooden_base_cabinet",
-      "rm": true,
-      "repl": "plain_wall,_empty_floor"
+      "pos": { "rel": "on", "w1": "w4", "w2": null, "xy": [0.5, 0.3], "h": 1.5, "sz": [2.0, 0.05, 0.3] },
+      "views": [
+        { "v": "v_1", "bb": [0.7, 1.0, 0.6, 0.7], "vis": "p" },
+        { "v": "v_3", "bb": [0.3, 0.8, 0.6, 0.7], "vis": "f" }
+      ],
+      "d": "wooden_shelf_above_countertop",
+      "rm": false,
+      "repl": null
     },
     {
       "id": "clothesline_1",
       "cat": "fix",
       "type": "clothesline",
-      "pos": { "rel": "ceil", "w1": "w1", "w2": "w13", "xy": [0.15, 0.5], "h": 2.5, "sz": [3.0, null, 0.5] },
-      "views": [ { "v": "v1", "bb": [0.0, 1.0, 0.7, 0.9], "vis": "f" }, { "v": "v2", "bb": [0.0, 1.0, 0.7, 0.9], "vis": "f" }, { "v": "v3", "bb": [0.0, 1.0, 0.7, 0.9], "vis": "f" } ],
-      "d": "multiple_wires_wall_to_wall",
-      "rm": true,
-      "repl": "plain_wall,_empty_floor"
-    },
-    {
-      "id": "sink_1",
-      "cat": "fix",
-      "type": "sink",
-      "pos": { "rel": "on", "w1": "w10", "w2": null, "xy": [0.25, 0.52], "h": 0.85, "sz": [0.5, 0.2, 0.4] },
-      "views": [ { "v": "v2", "bb": [0.6, 0.7, 0.3, 0.4], "vis": "f" }, { "v": "v3", "bb": [0.5, 0.6, 0.3, 0.4], "vis": "f" } ],
-      "d": "white_ceramic_basin",
-      "rm": true,
-      "repl": "plain_wall,_empty_floor"
-    },
-    {
-      "id": "faucet_1",
-      "cat": "fix",
-      "type": "faucet",
-      "pos": { "rel": "on", "w1": "w10", "w2": null, "xy": [0.25, 0.53], "h": 1.0, "sz": [null, null, null] },
-      "views": [ { "v": "v2", "bb": [0.63, 0.67, 0.38, 0.45], "vis": "f" }, { "v": "v3", "bb": [0.53, 0.57, 0.38, 0.45], "vis": "f" } ],
-      "d": "chrome_kitchen_tap",
-      "rm": true,
-      "repl": "plain_wall_and_floor"
+      "pos": { "rel": "ceil", "w1": null, "w2": null, "xy": [0.25, 0.5], "h": 2.5, "sz": [null, null, null] },
+      "views": [
+        { "v": "v_1", "bb": [0.0, 1.0, 0.7, 1.0], "vis": "f" },
+        { "v": "v_2", "bb": [0.0, 1.0, 0.7, 1.0], "vis": "f" },
+        { "v": "v_3", "bb": [0.0, 1.0, 0.7, 1.0], "vis": "f" }
+      ],
+      "d": "clothesline_string_system",
+      "rm": false,
+      "repl": null
     },
     {
       "id": "wash_1",
       "cat": "appl",
       "type": "washing_machine",
-      "pos": { "rel": "on", "w1": "w10", "w2": null, "xy": [0.15, 0.52], "h": 0.45, "sz": [0.6, 0.85, 0.6] },
-      "views": [ { "v": "v3", "bb": [0.1, 0.25, 0.0, 0.3], "vis": "f" } ],
-      "d": "white_front_loading",
-      "rm": true,
-      "repl": "empty_space_under_counter"
+      "pos": { "rel": "on", "w1": "w4", "w2": null, "xy": [0.5, 0.15], "h": 0.0, "sz": [0.6, 0.85, 0.6] },
+      "views": [
+        { "v": "v_3", "bb": [0.1, 0.3, 0.1, 0.4], "vis": "f" }
+      ],
+      "d": "washing_machine",
+      "rm": false,
+      "repl": null
     },
     {
       "id": "dryer_1",
       "cat": "appl",
-      "type": "tumble_dryer",
-      "pos": { "rel": "on", "w1": "w10", "w2": null, "xy": [0.2, 0.52], "h": 0.45, "sz": [0.6, 0.85, 0.6] },
-      "views": [],
-      "d": "white_front_loading_assumed_next_to_washer",
-      "rm": true,
-      "repl": "empty_space_under_counter"
+      "type": "dryer",
+      "pos": { "rel": "on", "w1": "w4", "w2": null, "xy": [0.5, 0.45], "h": 0.0, "sz": [0.6, 0.85, 0.6] },
+      "views": [
+        { "v": "v_1", "bb": [0.6, 0.7, 0.1, 0.4], "vis": "p" }
+      ],
+      "d": "dryer",
+      "rm": false,
+      "repl": null
     },
     {
-      "id": "tbl_1",
+      "id": "ac_1",
+      "cat": "appl",
+      "type": "ac_unit",
+      "pos": { "rel": "on", "w1": "w4", "w2": null, "xy": [0.5, 0.5], "h": 2.2, "sz": [0.8, 0.3, 0.2] },
+      "views": [
+        { "v": "v_1", "bb": [0.8, 1.0, 0.8, 0.95], "vis": "f" }
+      ],
+      "d": "wall_mounted_ac_unit",
+      "rm": false,
+      "repl": null
+    },
+    {
+      "id": "table_1",
       "cat": "furn",
-      "type": "dining_table",
-      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.15, 0.25], "h": 0.75, "sz": [1.8, 0.75, 1.0] },
-      "views": [ { "v": "v1", "bb": [0.3, 0.7, 0.1, 0.4], "vis": "f" }, { "v": "v3", "bb": [0.3, 0.7, 0.1, 0.4], "vis": "f" } ],
-      "d": "large_black_oval_table",
-      "rm": true,
-      "repl": "empty_floor"
+      "type": "table",
+      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.3, 0.5], "h": 0.0, "sz": [1.8, 0.75, 1.0] },
+      "views": [
+        { "v": "v_1", "bb": [0.2, 0.6, 0.2, 0.5], "vis": "f" },
+        { "v": "v_2", "bb": [0.4, 0.7, 0.2, 0.5], "vis": "f" },
+        { "v": "v_3", "bb": [0.5, 0.8, 0.2, 0.5], "vis": "f" }
+      ],
+      "d": "large_black_oval_dining_table",
+      "rm": false,
+      "repl": null
     },
     {
       "id": "chair_1",
       "cat": "furn",
       "type": "chair",
-      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.1, 0.2], "h": 0.45, "sz": [0.5, 0.8, 0.5] },
-      "views": [ { "v": "v1", "bb": [0.2, 0.3, 0.1, 0.3], "vis": "f" } ],
-      "d": "black_metal_folding_chair",
-      "rm": true,
-      "repl": "empty_floor"
+      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.25, 0.4], "h": 0.0, "sz": [0.5, 0.8, 0.5] },
+      "views": [
+        { "v": "v_1", "bb": [0.1, 0.3, 0.2, 0.4], "vis": "p" }
+      ],
+      "d": "black_metal_dining_chair",
+      "rm": false,
+      "repl": null
     },
     {
       "id": "chair_2",
       "cat": "furn",
       "type": "chair",
-      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.1, 0.3], "h": 0.45, "sz": [0.5, 0.8, 0.5] },
-      "views": [ { "v": "v1", "bb": [0.2, 0.3, 0.2, 0.4], "vis": "f" } ],
-      "d": "black_metal_folding_chair",
-      "rm": true,
-      "repl": "empty_floor"
+      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.35, 0.4], "h": 0.0, "sz": [0.5, 0.8, 0.5] },
+      "views": [],
+      "d": "black_metal_dining_chair",
+      "rm": false,
+      "repl": null
     },
     {
       "id": "chair_3",
       "cat": "furn",
       "type": "chair",
-      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.2, 0.2], "h": 0.45, "sz": [0.5, 0.8, 0.5] },
-      "views": [ { "v": "v1", "bb": [0.4, 0.5, 0.1, 0.3], "vis": "f" } ],
-      "d": "black_metal_folding_chair",
-      "rm": true,
-      "repl": "empty_floor"
+      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.45, 0.4], "h": 0.0, "sz": [0.5, 0.8, 0.5] },
+      "views": [],
+      "d": "black_metal_dining_chair",
+      "rm": false,
+      "repl": null
     },
     {
       "id": "chair_4",
       "cat": "furn",
       "type": "chair",
-      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.2, 0.3], "h": 0.45, "sz": [0.5, 0.8, 0.5] },
-      "views": [ { "v": "v1", "bb": [0.4, 0.5, 0.2, 0.4], "vis": "f" } ],
-      "d": "black_metal_folding_chair",
-      "rm": true,
-      "repl": "empty_floor"
+      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.25, 0.6], "h": 0.0, "sz": [0.5, 0.8, 0.5] },
+      "views": [],
+      "d": "black_metal_dining_chair",
+      "rm": false,
+      "repl": null
     },
     {
       "id": "chair_5",
       "cat": "furn",
       "type": "chair",
-      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.15, 0.15], "h": 0.45, "sz": [0.5, 0.8, 0.5] },
-      "views": [ { "v": "v1", "bb": [0.3, 0.4, 0.05, 0.25], "vis": "f" } ],
-      "d": "black_metal_folding_chair",
-      "rm": true,
-      "repl": "empty_floor"
+      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.35, 0.6], "h": 0.0, "sz": [0.5, 0.8, 0.5] },
+      "views": [],
+      "d": "black_metal_dining_chair",
+      "rm": false,
+      "repl": null
     },
     {
       "id": "chair_6",
       "cat": "furn",
       "type": "chair",
-      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.15, 0.35], "h": 0.45, "sz": [0.5, 0.8, 0.5] },
-      "views": [ { "v": "v1", "bb": [0.3, 0.4, 0.25, 0.45], "vis": "f" } ],
-      "d": "black_metal_folding_chair",
-      "rm": true,
-      "repl": "empty_floor"
+      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.45, 0.6], "h": 0.0, "sz": [0.5, 0.8, 0.5] },
+      "views": [],
+      "d": "black_metal_dining_chair",
+      "rm": false,
+      "repl": null
     },
     {
       "id": "chair_7",
       "cat": "furn",
       "type": "chair",
-      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.05, 0.25], "h": 0.45, "sz": [0.5, 0.8, 0.5] },
-      "views": [ { "v": "v1", "bb": [0.1, 0.2, 0.15, 0.35], "vis": "f" } ],
-      "d": "black_metal_folding_chair_folded",
-      "rm": true,
-      "repl": "empty_floor"
+      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.2, 0.5], "h": 0.0, "sz": [0.5, 0.8, 0.5] },
+      "views": [],
+      "d": "black_metal_dining_chair",
+      "rm": false,
+      "repl": null
     },
     {
       "id": "chair_8",
       "cat": "furn",
       "type": "chair",
-      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.05, 0.3], "h": 0.45, "sz": [0.5, 0.8, 0.5] },
-      "views": [ { "v": "v1", "bb": [0.1, 0.2, 0.2, 0.4], "vis": "f" } ],
-      "d": "black_metal_folding_chair_folded",
-      "rm": true,
-      "repl": "empty_floor"
+      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.5, 0.5], "h": 0.0, "sz": [0.5, 0.8, 0.5] },
+      "views": [],
+      "d": "black_metal_dining_chair",
+      "rm": false,
+      "repl": null
     },
     {
       "id": "ironing_board_1",
       "cat": "furn",
       "type": "ironing_board",
-      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.28, 0.25], "h": 0.9, "sz": [1.2, 0.9, 0.4] },
-      "views": [ { "v": "v3", "bb": [0.6, 0.8, 0.2, 0.5], "vis": "f" } ],
-      "d": "metal_frame_patterned_cover",
-      "rm": true,
-      "repl": "empty_floor"
-    },
-    {
-      "id": "basket_laundry_1",
-      "cat": "furn",
-      "type": "laundry_basket",
-      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.05, 0.1], "h": 0.3, "sz": [0.6, 0.3, 0.4] },
-      "views": [ { "v": "v1", "bb": [0.0, 0.3, 0.0, 0.3], "vis": "p" } ],
-      "d": "large_blue_plastic_basket",
-      "rm": true,
-      "repl": "empty_floor"
-    },
-    {
-      "id": "bin_1",
-      "cat": "furn",
-      "type": "trash_bin",
-      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.22, 0.4], "h": 0.4, "sz": [0.3, 0.4, 0.3] },
-      "views": [ { "v": "v2", "bb": [0.55, 0.65, 0.0, 0.2], "vis": "f" } ],
-      "d": "round_metal_bin",
-      "rm": true,
-      "repl": "empty_floor"
+      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.4, 0.8], "h": 0.0, "sz": [1.2, 0.9, 0.4] },
+      "views": [
+        { "v": "v_2", "bb": [0.6, 0.8, 0.4, 0.6], "vis": "f" },
+        { "v": "v_3", "bb": [0.8, 1.0, 0.4, 0.6], "vis": "p" }
+      ],
+      "d": "ironing_board",
+      "rm": false,
+      "repl": null
     },
     {
       "id": "poster_1",
       "cat": "dec",
       "type": "poster",
-      "pos": { "rel": "on", "w1": "w1", "w2": null, "xy": [0.0, 0.2], "h": 1.6, "sz": [0.6, 0.9, null] },
-      "views": [ { "v": "v1", "bb": [0.05, 0.15, 0.4, 0.65], "vis": "f" } ],
-      "d": "framed_vintage_poster",
-      "rm": true,
-      "repl": "plain_wall"
+      "pos": { "rel": "on", "w1": "w7", "w2": null, "xy": [0.0, 0.7], "h": 1.5, "sz": [0.5, 0.7, null] },
+      "views": [
+        { "v": "v_1", "bb": [0.1, 0.2, 0.4, 0.6], "vis": "f" }
+      ],
+      "d": "vintage_art_poster",
+      "rm": false,
+      "repl": null
     },
     {
       "id": "poster_2",
       "cat": "dec",
-      "type": "framed_art",
-      "pos": { "rel": "on", "w1": "w7", "w2": null, "xy": [0.19, 0.6], "h": 1.6, "sz": [0.4, 0.5, null] },
-      "views": [ { "v": "v2", "bb": [0.1, 0.2, 0.5, 0.7], "vis": "f" } ],
-      "d": "framed_picture_near_stairs",
-      "rm": true,
-      "repl": "plain_wall"
+      "type": "poster",
+      "pos": { "rel": "on", "w1": "w7", "w2": null, "xy": [0.0, 0.4], "h": 1.5, "sz": [0.5, 0.7, null] },
+      "views": [],
+      "d": "vintage_art_poster",
+      "rm": false,
+      "repl": null
     },
     {
-      "id": "poster_3",
-      "cat": "dec",
-      "type": "framed_art",
-      "pos": { "rel": "on", "w1": "w7", "w2": null, "xy": [0.19, 0.55], "h": 1.6, "sz": [0.4, 0.5, null] },
-      "views": [ { "v": "v2", "bb": [0.2, 0.3, 0.5, 0.7], "vis": "f" } ],
-      "d": "framed_picture_near_stairs",
-      "rm": true,
-      "repl": "plain_wall"
-    },
-    {
-      "id": "poster_4",
-      "cat": "dec",
-      "type": "framed_art",
-      "pos": { "rel": "on", "w1": "w13", "w2": null, "xy": [0.356, 0.25], "h": 1.6, "sz": [0.4, 0.6, null] },
-      "views": [ { "v": "v3", "bb": [0.9, 0.98, 0.5, 0.7], "vis": "f" } ],
-      "d": "framed_picture_near_door",
-      "rm": true,
-      "repl": "plain_wall"
-    },
-    {
-      "id": "basin_small_1",
-      "cat": "dec",
-      "type": "basin",
-      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.24, 0.45], "h": 0.9, "sz": [0.4, 0.2, 0.4] },
-      "views": [ { "v": "v3", "bb": [0.45, 0.55, 0.35, 0.45], "vis": "f" } ],
-      "d": "blue_plastic_basin_on_counter",
-      "rm": true,
-      "repl": "plain_wall,_empty_floor"
-    },
-    {
-      "id": "iron_1",
-      "cat": "dec",
-      "type": "clothing_iron",
-      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.28, 0.25], "h": 0.95, "sz": [0.2, 0.15, 0.1] },
-      "views": [ { "v": "v3", "bb": [0.65, 0.7, 0.4, 0.45], "vis": "f" } ],
-      "d": "clothing_iron_on_board",
-      "rm": true,
-      "repl": "plain_wall,_empty_floor"
-    },
-    {
-      "id": "clutter_kit_1",
+      "id": "basket_1",
       "cat": "grp",
-      "type": "clutter",
-      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.2, 0.5], "h": 0.9, "sz": [1.0, 0.3, 0.4] },
-      "views": [ { "v": "v2", "bb": [0.4, 0.6, 0.3, 0.4], "vis": "f" }, { "v": "v3", "bb": [0.3, 0.5, 0.3, 0.4], "vis": "f" } ],
-      "d": "bottles_cleaning_supplies_baskets_on_kitchenette_counter",
-      "rm": true,
-      "repl": "plain_wall,_empty_floor"
-    },
-    {
-      "id": "clutter_long_1",
-      "cat": "grp",
-      "type": "clutter",
-      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.0, 0.45], "h": 0.9, "sz": [1.0, 0.5, 0.4] },
-      "views": [ { "v": "v1", "bb": [0.0, 0.3, 0.3, 0.6], "vis": "f" } ],
-      "d": "items_on_shelf_and_counter_long_wall",
-      "rm": true,
-      "repl": "plain_wall,_empty_floor"
-    },
-    {
-      "id": "clutter_laundry_1",
-      "cat": "grp",
-      "type": "laundry_pile",
-      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.15, 0.25], "h": 0.75, "sz": [0.8, 0.4, 0.6] },
-      "views": [ { "v": "v3", "bb": [0.3, 0.5, 0.3, 0.5], "vis": "f" } ],
-      "d": "folded_towels_clothes_on_table_and_board",
-      "rm": true,
-      "repl": "plain_wall,_empty_floor"
+      "type": "laundry_basket",
+      "pos": { "rel": "floor", "w1": null, "w2": null, "xy": [0.1, 0.2], "h": 0.0, "sz": [0.4, 0.5, 0.4] },
+      "views": [
+        { "v": "v_1", "bb": [0.0, 0.3, 0.0, 0.4], "vis": "p" }
+      ],
+      "d": "blue_laundry_basket",
+      "rm": false,
+      "repl": null
     }
   ]
 }
