Update 3. Kitchen Image -> JSON - Empty Room Version 2.md

--- a/Nano Banana/Juno Heights/3. Kitchen Image -> JSON - Empty Room Version 2.md
+++ b/Nano Banana/Juno Heights/3. Kitchen Image -> JSON - Empty Room Version 2.md
@@ -27,9 +27,9 @@
   "media": {
     "floor": "image_0.png",
     "refs": [
-      { "id": "v_1", "file": "image_1.png" },
-      { "id": "v_2", "file": "image_2.png" },
-      { "id": "v_3", "file": "image_3.png" }
+      { "id": "v_1", "file": "Reference_1.png" },
+      { "id": "v_2", "file": "Reference_2.png" },
+      { "id": "v_3", "file": "Reference_3.png" }
     ]
   },
   "space": {
